TEST_PROGRAMS/INVALID/02/notallpathshavereturns.go
package main

func foo(a int) int{
    if(a==0){
        a=0;
    }else{
        a=10
        return a;
    }

}

func main (){
    foo(1)
}
